--- a/projectapp/src/Pages/CSS/newLobby.css
+++ b/projectapp/src/Pages/CSS/newLobby.css
@@ -19,7 +19,7 @@
     padding-top: 5vh;
     display: flex;
     justify-content: center;
-    font-size: 100%;
+    font-size: 3vh;
     color: white;
 }
 
@@ -38,7 +38,7 @@
 
 .gameNameType {
     min-width: 30%;
-    font-size: 100%;
+    font-size: 5vh;
     padding-left: 1vw;
     padding-right: 1vw;
     color: #f2f2f2;
@@ -91,7 +91,7 @@ td {
 
 th,
 td {
-    font-size: 100%;
+    font-size: 2vh;
     padding: 2vh;
     text-align: left;
 }
@@ -178,7 +178,7 @@ th {
 }
 
 .playerInfo {
-    font-size: 100%;
+    font-size: 3vh;
 }
 
 @keyframes ellipsis {
@@ -209,7 +209,7 @@ th {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 100%;
+    font-size: 5vh;
     border: solid 3px gray;
     color: #f2f2f2;
     left: 0;
